# mri-preproc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mri_preproc/: main.py
mri_preproc/brain_extract/: brain_extract.py  config.py
mri_preproc/common/: io.py  preproc.py  util.py
mri_preproc/common/tests/: test_preproc.py
mri_preproc/registration/: registration.py
