[project]
name = "mri-preproc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairocffi>=1.7.1",
    "click>=8.1.8",
    "dipy>=1.10.0",
    "fury>=0.12.0",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.3",
    "pyqt5>=5.15.11",
    "pyside2>=5.15.2.1",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
]
